# ComfyUI-Freepik

./: .gitignore  CONTRIBUTING.md  INSTALL.md  LICENSE  PROJECT_SUMMARY.md  README.md  __init__.py  config.json  pyproject.toml  requirements.txt  test.py
.github/workflows/: publish.yml
api/: __init__.py  client.py  tasks.py
nodes/editing/: upscaler_nodes.py
nodes/generation/: __init__.py  mystic_node.py
nodes/utilities/: remove_bg_node.py
utils/: __init__.py  cache.py  image_utils.py
web/: freepik_status.js
