[project]
name = "freepik"
description = "Integrates Freepik's AI capabilities into ComfyUI workflows with features for photorealistic generation, upscaling, and background removal, plus smart caching and cost management. (Description by CC)"
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# Freepik ComfyUI Custom Node Requirements", "# Core dependencies", "requests>=2.31.0", "Pillow>=10.0.0", "torch>=2.0.0", "# Optional dependencies for enhanced features", "urllib3>=2.0.0", "# Already included in ComfyUI", "# numpy", "# torchvision"]

[project.urls]
Repository = "https://github.com/febogallo/ComfyUI-Freepik"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/febogallo/ComfyUI-Freepik/wiki"
"Bug Tracker" = "https://github.com/febogallo/ComfyUI-Freepik/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Freepik"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

